资料/MT设备/二次开发例程及接口文件V3.16.2/应用例程/VBDemo2/VBDemo/MT_API.bas

Attribute VB_Name = "MoTech"
'上海小墨科技有限公司VB接口文件
'V3.10 updated at 2014 07 25
'www.sh-xiaomo.com

Option Explicit

Public Const R_OK = 0
Public Const RUN_OFF = 0
Public Const RUN_ON = 1
Public Const DIR_NEG = 0
Public Const DIR_POS = 1
Public Const LIMIT_ON = 1
Public Const LIMIT_OFF = 0
Public Const RESOURCE_MOTOR = &H1
Public Const RESOURCE_TTL_IN = &H2
Public Const RESOURCE_TTL_OUT = &H4
Public Const RESOURCE_OPTIC_IN = &H8
Public Const RESOURCE_OPTIC_OUT = &H10
Public Const RESOURCE_AD = &H20
Public Const RESOURCE_OC = &H40
Public Const RESOURCE_LINE = &H80
Public Const RESOURCE_CIRCLE = &H100
Public Const RESOURCE_PLC = &H200
Public Const RESOURCE_STREAM = &H400
Public Const RESOURCE_ENCODER = &H800

Declare Function MT_Init Lib "MT_API.dll" () As Long

Declare Function MT_DeInit Lib "MT_API.dll" () As Long

Declare Function MT_Get_Dll_Version Lib "MT_API.dll" (ByRef sVer As String) As Long

Declare Function MT_Open_UART Lib "MT_API.dll" (ByVal sCOM As String) As Long

Declare Function MT_Close_UART Lib "MT_API.dll" () As Long

Declare Function MT_Open_USB Lib "MT_API.dll" () As Long

Declare Function MT_Close_USB Lib "MT_API.dll" () As Long

Declare Function MT_Open_Net Lib "MT_API.dll" (ByVal IP0 As Byte, ByVal IP1 As Byte, ByVal IP2 As Byte, ByVal IP3 As Byte, ByVal IPPort As Integer) As Long

Declare Function MT_Close_Net Lib "MT_API.dll" () As Long

Declare Function MT_Check Lib "MT_API.dll" () As Long

Declare Function MT_Get_Product_Resource Lib "MT_API.dll" (ByRef pValue As Long) As Long

Declare Function MT_Get_Product_ID Lib "MT_API.dll" (ByVal sID As String) As Long

Declare Function MT_Get_Product_SN Lib "MT_API.dll" (ByVal sSN As String) As Long

Declare Function MT_Get_Product_Version Lib "MT_API.dll" (ByRef pMajor As Long, ByRef pMinor As Long) As Long

Declare Function MT_Get_Product_Version2 Lib "MT_API.dll" (ByRef pMajor As Long, ByRef pMinor As Long, ByRef pRelease As Long, ByRef pBuild As Long) As Long

Declare Function MT_Get_Axis_Num Lib "MT_API.dll" (ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Acc Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Acc Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Get_Axis_Dec Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Dec Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Get_Axis_Mode Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Mode_Velocity Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Mode_Position Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Mode_Position_Open Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Mode_Position_Close Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Get_Axis_Velocity_V_Target Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Velocity_V_Target_Abs Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Velocity_V_Target_Rel Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Velocity_Stop Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Get_Axis_Position_V_Max Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Position_V_Max Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Get_Axis_Position_P_Target Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Position_P_Target_Abs Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Position_P_Target_Rel Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Position_Stop Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Position_Close_Dec_Factor Lib "MT_API.dll" (ByVal AObj As Integer, ByVal AFactor As Single) As Long

Declare Function MT_Set_Axis_Halt Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Halt_All Lib "MT_API.dll" () As Long

Declare Function MT_Get_Axis_V_Now Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Software_P_Now Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Software_P Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Get_Axis_Status Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pRun As Byte, ByRef pDir As Byte, ByRef pNeg As Byte, ByRef pPos As Byte, ByRef pZero As Byte, ByRef pMode As Byte) As Long

Declare Function MT_Get_Param_Mem_Len Lib "MT_API.dll" (ByRef pValue As Long) As Long

Declare Function MT_Get_Param_Mem_Data Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Byte) As Long

Declare Function MT_Set_Param_Mem_Data Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Byte) As Long

Declare Function MT_Get_Optic_In_Num Lib "MT_API.dll" (ByRef pValue As Long) As Long

Declare Function MT_Get_Optic_In_Single Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Get_Optic_In_All Lib "MT_API.dll" (ByRef pValue As Long) As Long

Declare Function MT_Get_Optic_Out_Num Lib "MT_API.dll" (ByRef pValue As Long) As Long

Declare Function MT_Set_Optic_Out_Single Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Optic_Out_All Lib "MT_API.dll" (ByVal Value As Long) As Long

Declare Function MT_Get_OC_Out_Num Lib "MT_API.dll" (ByRef pValue As Long) As Long

Declare Function MT_Set_OC_Out_Single Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_OC_Out_All Lib "MT_API.dll" (ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Mode_Home Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Mode_Home_Home_Switch Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Mode_Home_Encoder_Index Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Mode_Home_Encoder_Home_Switch Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Home_V Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Home_Stop Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Software_Limit_Neg_Value Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Software_Limit_Pos_Value Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Software_Limit_Enable Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Software_Limit_Disable Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Line_Axis Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Axis_ID0 As Long, ByVal Axis_ID1 As Long) As Long

Declare Function MT_Set_Axis_Line_Acc Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Line_Dec Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Line_V Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Line_Run Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Line_Stop Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Line_Halt Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Line_Rel Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Axis_Target0 As Long, ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Axis_Line_Abs Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Axis_Target0 As Long, ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Axis_Line_Run_Rel Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Axis_Target0 As Long, ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Axis_Line_Run_Abs Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Axis_Target0 As Long, ByVal Axis_Target1 As Long) As Long

Declare Function MT_Get_Axis_Line_Num Lib "MT_API.dll" (ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Line_Status Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Line_Axis Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pID0 As Long, ByRef pID1 As Long) As Long

Declare Function MT_Get_Axis_Line_Acc Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Line_Dec Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Line_V Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Get_AD_Num Lib "MT_API.dll" (ByRef pValue As Long) As Long

Declare Function MT_Get_AD_Data Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Get_Board_T Lib "MT_API.dll" (ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Circle_Axis Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Axis_ID0 As Long, ByVal Axis_ID1 As Long) As Long

Declare Function MT_Set_Axis_Circle_Acc Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Circle_Dec Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Circle_V Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Circle_R_CW_Run_Rel Lib "MT_API.dll" (ByVal AObj As Integer, ByVal AR As Long, ByVal Axis_Target0 As Long, ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Axis_Circle_R_CW_Run_Abs Lib "MT_API.dll" (ByVal AObj As Integer, ByVal AR As Long, ByVal Axis_Target0 As Long, ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Axis_Circle_R_CCW_Run_Rel Lib "MT_API.dll" (ByVal AObj As Integer, ByVal AR As Long, ByVal Axis_Target0 As Long, ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Axis_Circle_R_CCW_Run_Abs Lib "MT_API.dll" (ByVal AObj As Integer, ByVal AR As Long, ByVal Axis_Target0 As Long, ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Axis_Circle_Stop Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Circle_Halt Lib "MT_API.dll" (ByVal AObj As Integer) As Long

Declare Function MT_Get_Axis_Circle_Num Lib "MT_API.dll" (ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Circle_Status Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Circle_Axis Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pID0 As Long, ByRef pID1 As Long) As Long

Declare Function MT_Get_Axis_Circle_Acc Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Circle_Dec Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Circle_V Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Get_PLC_Var_Num Lib "MT_API.dll" (ByRef pValue As Long) As Long

Declare Function MT_Get_PLC_Var_Data Lib "MT_API.dll" (ByVal AObj As Integer, ByRef pValue As Long) As Long

Declare Function MT_Set_PLC_Var_Data Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Long) As Long

Declare Function MT_Set_PLC_Pause Lib "MT_API.dll" () As Long

Declare Function MT_Set_PLC_Stop Lib "MT_API.dll" () As Long

Declare Function MT_Set_PLC_Run Lib "MT_API.dll" () As Long

Declare Function MT_Set_PLC_Data Lib "MT_API.dll" (ByVal AObj As Integer, ByVal Value As Byte) As Long
